--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_firebase_note"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_firebase_note"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NotesFirebase"
+        android:theme="@style/AppTheme.DayNight"
         tools:targetApi="31">
         <activity
             android:name=".TestingActivity"
