--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,8 +33,8 @@ jobs:
       # My Path ([Convert]::ToBase64String([IO.File]::ReadAllBytes("C:\Users\balachandra.d\private\NotesFirebase\.gradle\notefirebase.jks")) > C:\Users\balachandra.d\private\NotesFirebase\.gradle\notefirebase.b64)
       - name: Decode Keystore and Set Signing Env Vars
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > notefirebase.jks
-          echo "KEYSTORE_FILE = notefirebase.jks" >> $GITHUB_ENV
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > notefirebase.jks
+          echo "KEYSTORE_FILE=notefirebase.jks" >> $GITHUB_ENV
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
